--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
       <nav>
         <a id="home-btn" href="/">MINIML.</a>
-        <a class="nav-menu" href="/home">Home</a>
-        <a class="nav-menu" href="/about">About</a>
-        <a class="nav-menu" href="/service">Service</a>
-        <a class="nav-menu" href="/work">Work</a>
-        <a class="nav-menu" href="/contact">Contact</a>
+        <a class="nav-menu" href="/">Home</a>
+        <a class="nav-menu" href="/">About</a>
+        <a class="nav-menu" href="/">Service</a>
+        <a class="nav-menu" href="/">Work</a>
+        <a class="nav-menu" href="/">Contact</a>
       </nav>
     </header>
     <section class="hero-title">
